antlr/antlr_output/Python3SimplifiedParser.py
# Generated from Python3Simplified.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Python3SimplifiedParser ( Parser ):

    grammarFileName = "Python3Simplified.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "':'", "'('", "')'", "','", "'<'", 
                     "'>'", "'=='", "'>='", "'<='", "'!='", "'*'", "'//'", 
                     "'/'", "'%'", "'+'", "'-'", "'True'", "'False'", "'['", 
                     "']'", "'if'", "'elif'", "'else'", "'while'", "'for'", 
                     "'in'", "'def'", "'return'", "'and'", "'or'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\\t'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "DEF", "RETURN", "AND", "OR", "NAME", 
                      "NUMBER", "STRING", "NEWLINE", "INDENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simple_stmt = 2
    RULE_small_stmt = 3
    RULE_compound_stmt = 4
    RULE_assignment = 5
    RULE_expr_stmt = 6
    RULE_return_stmt = 7
    RULE_test = 8
    RULE_if_stmt = 9
    RULE_while_stmt = 10
    RULE_for_stmt = 11
    RULE_funcdef = 12
    RULE_parameters = 13
    RULE_suite = 14
    RULE_comp_op = 15
    RULE_expr = 16
    RULE_atom = 17
    RULE_list = 18
    RULE_func_call = 19

    ruleNames =  [ "program", "statement", "simple_stmt", "small_stmt", 
                   "compound_stmt", "assignment", "expr_stmt", "return_stmt", 
                   "test", "if_stmt", "while_stmt", "for_stmt", "funcdef", 
                   "parameters", "suite", "comp_op", "expr", "atom", "list", 
                   "func_call" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    IF=22
    ELIF=23
    ELSE=24
    WHILE=25
    FOR=26
    IN=27
    DEF=28
    RETURN=29
    AND=30
    OR=31
    NAME=32
    NUMBER=33
    STRING=34
    NEWLINE=35
    INDENT=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(Python3SimplifiedParser.NEWLINE)
            else:
                return self.getToken(Python3SimplifiedParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3SimplifiedParser.StatementContext)
            else:
                return self.getTypedRuleContext(Python3SimplifiedParser.StatementContext,i)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = Python3SimplifiedParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134055985160) != 0):
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [35]:
                    self.state = 40
                    self.match(Python3SimplifiedParser.NEWLINE)
                    pass
                elif token in [3, 18, 19, 20, 22, 25, 26, 28, 29, 32, 33, 34, 36]:
                    self.state = 41
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.Simple_stmtContext,0)


        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(Python3SimplifiedParser.INDENT)
            else:
                return self.getToken(Python3SimplifiedParser.INDENT, i)

        def compound_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Python3SimplifiedParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==36:
                    self.state = 47
                    self.match(Python3SimplifiedParser.INDENT)
                    self.state = 52
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 53
                self.simple_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==36:
                    self.state = 54
                    self.match(Python3SimplifiedParser.INDENT)
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.compound_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.Small_stmtContext,0)


        def NEWLINE(self):
            return self.getToken(Python3SimplifiedParser.NEWLINE, 0)

        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)




    def simple_stmt(self):

        localctx = Python3SimplifiedParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.small_stmt()
            self.state = 64
            self.match(Python3SimplifiedParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Small_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.AssignmentContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.Expr_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_small_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmall_stmt" ):
                listener.enterSmall_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmall_stmt" ):
                listener.exitSmall_stmt(self)




    def small_stmt(self):

        localctx = Python3SimplifiedParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_small_stmt)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.expr_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.For_stmtContext,0)


        def funcdef(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.FuncdefContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)




    def compound_stmt(self):

        localctx = Python3SimplifiedParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_stmt)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.if_stmt()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.while_stmt()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.for_stmt()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.funcdef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Python3SimplifiedParser.NAME, 0)

        def expr(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.ExprContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = Python3SimplifiedParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(Python3SimplifiedParser.NAME)
            self.state = 78
            self.match(Python3SimplifiedParser.T__0)
            self.state = 79
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.ExprContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)




    def expr_stmt(self):

        localctx = Python3SimplifiedParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(Python3SimplifiedParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.ExprContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)




    def return_stmt(self):

        localctx = Python3SimplifiedParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(Python3SimplifiedParser.RETURN)
            self.state = 84
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3SimplifiedParser.ExprContext)
            else:
                return self.getTypedRuleContext(Python3SimplifiedParser.ExprContext,i)


        def comp_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3SimplifiedParser.Comp_opContext)
            else:
                return self.getTypedRuleContext(Python3SimplifiedParser.Comp_opContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(Python3SimplifiedParser.AND)
            else:
                return self.getToken(Python3SimplifiedParser.AND, i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(Python3SimplifiedParser.OR)
            else:
                return self.getToken(Python3SimplifiedParser.OR, i)

        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)




    def test(self):

        localctx = Python3SimplifiedParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_test)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.expr(0)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4032) != 0):
                    self.state = 87
                    self.comp_op()
                    self.state = 88
                    self.expr(0)
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.expr(0)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==30 or _la==31:
                    self.state = 100
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [30]:
                        self.state = 96
                        self.match(Python3SimplifiedParser.AND)
                        self.state = 97
                        self.expr(0)
                        pass
                    elif token in [31]:
                        self.state = 98
                        self.match(Python3SimplifiedParser.OR)
                        self.state = 99
                        self.expr(0)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Python3SimplifiedParser.IF, 0)

        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3SimplifiedParser.TestContext)
            else:
                return self.getTypedRuleContext(Python3SimplifiedParser.TestContext,i)


        def suite(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3SimplifiedParser.SuiteContext)
            else:
                return self.getTypedRuleContext(Python3SimplifiedParser.SuiteContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(Python3SimplifiedParser.ELIF)
            else:
                return self.getToken(Python3SimplifiedParser.ELIF, i)

        def ELSE(self):
            return self.getToken(Python3SimplifiedParser.ELSE, 0)

        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = Python3SimplifiedParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(Python3SimplifiedParser.IF)
            self.state = 108
            self.test()
            self.state = 109
            self.match(Python3SimplifiedParser.T__1)
            self.state = 110
            self.suite()
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 111
                    self.match(Python3SimplifiedParser.ELIF)
                    self.state = 112
                    self.test()
                    self.state = 113
                    self.match(Python3SimplifiedParser.T__1)
                    self.state = 114
                    self.suite() 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 121
                self.match(Python3SimplifiedParser.ELSE)
                self.state = 122
                self.match(Python3SimplifiedParser.T__1)
                self.state = 123
                self.suite()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(Python3SimplifiedParser.WHILE, 0)

        def test(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.TestContext,0)


        def suite(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.SuiteContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)




    def while_stmt(self):

        localctx = Python3SimplifiedParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(Python3SimplifiedParser.WHILE)
            self.state = 127
            self.test()
            self.state = 128
            self.match(Python3SimplifiedParser.T__1)
            self.state = 129
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(Python3SimplifiedParser.FOR, 0)

        def NAME(self):
            return self.getToken(Python3SimplifiedParser.NAME, 0)

        def IN(self):
            return self.getToken(Python3SimplifiedParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.ExprContext,0)


        def suite(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.SuiteContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_for_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_stmt" ):
                listener.enterFor_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_stmt" ):
                listener.exitFor_stmt(self)




    def for_stmt(self):

        localctx = Python3SimplifiedParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_for_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(Python3SimplifiedParser.FOR)
            self.state = 132
            self.match(Python3SimplifiedParser.NAME)
            self.state = 133
            self.match(Python3SimplifiedParser.IN)
            self.state = 134
            self.expr(0)
            self.state = 135
            self.match(Python3SimplifiedParser.T__1)
            self.state = 136
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(Python3SimplifiedParser.DEF, 0)

        def NAME(self):
            return self.getToken(Python3SimplifiedParser.NAME, 0)

        def suite(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.SuiteContext,0)


        def parameters(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.ParametersContext,0)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = Python3SimplifiedParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(Python3SimplifiedParser.DEF)
            self.state = 139
            self.match(Python3SimplifiedParser.NAME)
            self.state = 140
            self.match(Python3SimplifiedParser.T__2)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 141
                self.parameters()


            self.state = 144
            self.match(Python3SimplifiedParser.T__3)
            self.state = 145
            self.match(Python3SimplifiedParser.T__1)
            self.state = 146
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(Python3SimplifiedParser.NAME)
            else:
                return self.getToken(Python3SimplifiedParser.NAME, i)

        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = Python3SimplifiedParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(Python3SimplifiedParser.NAME)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 149
                self.match(Python3SimplifiedParser.T__4)
                self.state = 150
                self.match(Python3SimplifiedParser.NAME)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(Python3SimplifiedParser.Simple_stmtContext,0)


        def NEWLINE(self):
            return self.getToken(Python3SimplifiedParser.NEWLINE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Python3SimplifiedParser.StatementContext)
            else:
                return self.getTypedRuleContext(Python3SimplifiedParser.StatementContext,i)


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)




    def suite(self):

        localctx = Python3SimplifiedParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_suite)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 18, 19, 20, 29, 32, 33, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.simple_stmt()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(Python3SimplifiedParser.NEWLINE)
                self.state = 159 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 158
                        self.statement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 161 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comp_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Python3SimplifiedParser.RULE_comp_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_op" ):
                listener.enterComp_op(self)
